# csci-366-spring2023-private

./: .gitignore  README.md
c/examples/: CMakeLists.txt  CPPDemo.cpp  CPPDemo.h  assembly.c  bit_manipulation.c  concurrency.c  functions.c  functions.h  intro.c  linking.c  linking.h  linking2.c  lmc_demos.lmc  nasm_demo.asm  pointers.c  sockets.c  stack_and_heap.c  strings_structs.c
c/homework/: CMakeLists.txt  homework.cpp
c/homework/lib/: googletest-distribution.cbp
c/homework/lib/googlemock/: gmock.cbp
c/homework/lib/googlemock/src/: gmock-spec-builders.cc
c/homework/lib/googlemock/test/: gmock-function-mocker_nc_test.py  gmock_output_test.py  gmock_test_utils.py
c/homework/lib/googletest/: gtest.cbp
c/homework/lib/googletest/cmake/: internal_utils.cmake
c/homework/lib/googletest/docs/: pkgconfig.md
c/homework/lib/googletest/include/gtest/: gtest-matchers.h  gtest-param-test.h
c/homework/lib/googletest/samples/: prime_tables.h
c/homework/lib/googletest/scripts/: common.py  release_docs.py
c/homework/lib/googletest/test/: googletest-break-on-failure-unittest.py  googletest-failfast-unittest.py  googletest-list-tests-unittest.py  googletest-param-test-invalid-name1-test.py  googletest-param-test-invalid-name2-test.py  googletest-param-test2-test.cc  googletest-port-test.cc  googletest-throw-on-failure-test_.cc  googletest-uninitialized-test.py  gtest_unittest.cc
java/: Dockerfile  (+2 more)
lmsm/: CMakeLists.txt  README.md
lmsm/examples/asm/: countdown.asm  recursive.asm  square.asm
lmsm/examples/firth/: countdown.firth  fib.firth
lmsm/src/: assembler.c  assembler.h  firth.c  firth.h  lmsm.c  lmsm.h  main.c  repl.c  repl.h
lmsm/test/: CMakeLists.txt  assembler.cpp  firth.cpp  lmsm.cpp
lmsm/test/lib/: CMakeLists.txt  googletest-distribution.cbp
lmsm/test/lib/googlemock/: gmock.cbp
lmsm/test/lib/googlemock/include/gmock/: gmock-matchers.h
lmsm/test/lib/googlemock/include/gmock/internal/: gmock-pp.h
lmsm/test/lib/googlemock/scripts/: fuse_gmock_files.py
lmsm/test/lib/googletest/: README.md  gtest.cbp
lmsm/test/lib/googletest/docs/: advanced.md
lmsm/test/lib/googletest/src/: gtest-death-test.cc
lmsm/test/lib/googletest/test/: googletest-catch-exceptions-test.py  googletest-catch-exceptions-test_.cc  googletest-color-test.py  googletest-death-test-test.cc  googletest-env-var-test.py  googletest-env-var-test_.cc  googletest-filter-unittest.py  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-setuptestsuite-test.py  googletest-shuffle-test.py  googletest-throw-on-failure-test.py
(+27 files in other folders)
